# iaspis

./: .gitignore  iaspis.cabal  readme.md  syntax  syntax.ebnf
app/: CommandLine.hs  Main.hs  ModuleLoader.hs  Parser.hs  Source.hs  Type.hs  Utils.hs  Value.hs
app/Analysis/: Build.hs  Contract.hs  ContractCheck.hs  Environment.hs  Error.hs  ImportCheck.hs  Memory.hs  MemoryCheck.hs  Module.hs  Mutability.hs  MutabilityCheck.hs  NameResolver.hs  Payability.hs  Scope.hs  TypeCheck.hs  Utils.hs
app/Analysis/Environment/: AltBuild.hs  AltEnvironment.hs  Build.hs  Environment.hs  Error.hs  Traversals.hs  Utils.hs
app/CLI/: Command.hs  Commands.hs  Parser.hs  Types.hs  Util.hs  Utils.hs
app/CLI/Commands/: Account.hs  Clear.hs  Compile.hs  Init.hs
app/Codegen/: Generate.hs  Transpile.hs  Types.hs  Utils.hs
app/Deployments/: Entry.hs
app/Iaspis/: DeclUtils.hs  Grammar.hs  Prelude.hs  Source.hs  TypeUtils.hs  Utils.hs
app/LayoutCache/: Entry.hs  Layout.hs  Types.hs  Utils.hs
app/Parser/: Base.hs  Source.hs  Types.hs  Utils.hs
app/Solidity/: Grammar.hs
app/Transpile/: Common.hs  Contract.hs  Enum.hs  Facet.hs  Module.hs  Proxy.hs  Storage.hs  Struct.hs  Types.hs  Utils.hs
app/Transpiler/: Entry.hs
app/Transpiler/Analysis/: Build.hs  Contract.hs  Environment.hs  Error.hs  Memory.hs  Module.hs  Mutability.hs  Payability.hs  Scope.hs  TypeCheck.hs  Utils.hs
app/Transpiler/Codegen/: Generate.hs  Types.hs
app/Transpiler/Iaspis/: DeclUtils.hs  Grammar.hs  TypeUtils.hs
app/Transpiler/LayoutCache/: Layout.hs  Types.hs  Utils.hs
app/Transpiler/Parser/: Base.hs  Source.hs  Types.hs  Utils.hs
app/Transpiler/Solidity/: Grammar.hs
app/Transpiler/Transpile/: Common.hs  Contract.hs  Enum.hs  Facet.hs  Module.hs  Proxy.hs  Storage.hs  Struct.hs  Types.hs  Utils.hs
app/Transpiler/Utils/: Error.hs  File.hs  SolContracts.hs  Text.hs
app/Transpiler/Yul/: Grammar.hs
app/Utils/: Error.hs  Text.hs
app/Yul/: Grammar.hs
contracts/: EERC721.ip  Expressions.ip  HelloWorld.ip  Structs.ip  Test.ip  Utils.ip
contracts/nested1/: Nested1.ip
contracts/nested1/nested3/: Nested3.ip
contracts/nested2/: Nested2.ip
sol/: DiamondCutFacet.sol  DiamondLoupeFacet.sol  LibDiamond.sol
test/: Instances.hs  Main.hs
