cabal-version:      2.4
name:               iaspis
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             dbnor0
maintainer:         dbnor0@gmail.com

-- A copyright notice.
-- copyright:
-- category:

executable iaspis
    main-is:
        Main.hs
    other-modules:
        Analysis.NameResolver
        Analysis.Utils
        Iaspis.Source
        Iaspis.Utils
        Parser.Base
        Parser.Source
        Parser.Types
        Parser.Utils
    other-extensions:
        ApplicativeDo
        BlockArguments
        DataKinds
        DefaultSignatures
        DeriveAnyClass
        DerivingStrategies
        DerivingVia
        DuplicateRecordFields
        FunctionalDependencies
        GADTs
        GeneralizedNewtypeDeriving
        LambdaCase
        MagicHash
        MultiWayIf
        NegativeLiterals
        NoMonomorphismRestriction
        NoStarIsType
        OverloadedLabels
        OverloadedStrings
        PartialTypeSignatures
        PatternSynonyms
        QuantifiedConstraints
        RecordWildCards
        RecursiveDo
        TemplateHaskell
        TypeFamilies
        TypeFamilyDependencies
        UnboxedSums
        UnboxedTuples
        UndecidableInstances
        ViewPatterns
    ghc-options:
        -threaded
        -rtsopts
        -with-rtsopts=-N
        -Wall
        -Wcompat
        -Widentities
        -Wmissing-deriving-strategies
        -Wno-name-shadowing
        -Wno-unticked-promoted-constructors
        -Wpartial-fields
        -Wprepositive-qualified-module
        -Wredundant-constraints
        -Wunused-packages
    build-depends:    
        base ^>=4.14.3.0
        , containers
        , data-fix
        , deriving-compat
        , directory
        , text
        , megaparsec
    hs-source-dirs:   app
    default-language: Haskell2010
