cabal-version:      2.4
name:               iaspis
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             dbnor0
maintainer:         dbnor0@gmail.com

-- A copyright notice.
-- copyright:
-- category:

executable iaspis
  main-is:
    Main.hs
  other-modules:
    Transpiler.Analysis.Build
    Transpiler.Analysis.Error
    Transpiler.Analysis.Module
    Transpiler.Analysis.Mutability
    Transpiler.Analysis.Memory
    Transpiler.Analysis.Utils
    Transpiler.Analysis.Scope
    Transpiler.Analysis.Contract
    Transpiler.Analysis.Environment
    Transpiler.Analysis.TypeCheck
    Transpiler.Codegen.Generate
    Transpiler.Codegen.Types
    Transpiler.Iaspis.DeclUtils
    Transpiler.Iaspis.Grammar
    Transpiler.Iaspis.TypeUtils
    Transpiler.Parser.Base
    Transpiler.Parser.Source
    Transpiler.Parser.Types
    Transpiler.Parser.Utils
    Transpiler.Solidity.Grammar
    Transpiler.Transpile.Common
    Transpiler.Transpile.Contract
    Transpiler.Transpile.Enum
    Transpiler.Transpile.Facet
    Transpiler.Transpile.Module
    Transpiler.Transpile.Proxy
    Transpiler.Transpile.Storage
    Transpiler.Transpile.Struct
    Transpiler.Transpile.Types
    Transpiler.Transpile.Utils
    Transpiler.Utils.Error
    Transpiler.Utils.Text
    Transpiler.Yul.Grammar
  other-extensions:
    ApplicativeDo
    BlockArguments
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    LambdaCase
    MagicHash
    MultiWayIf
    NegativeLiterals
    NoMonomorphismRestriction
    NoStarIsType
    OverloadedLabels
    OverloadedStrings
    PartialTypeSignatures
    PatternSynonyms
    QuantifiedConstraints
    RecordWildCards
    RecursiveDo
    TemplateHaskell
    TypeFamilies
    TypeFamilyDependencies
    UnboxedSums
    UnboxedTuples
    UndecidableInstances
    ViewPatterns
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N
    -Wall
    -Wcompat
    -Widentities
    -Wmissing-deriving-strategies
    -Wno-name-shadowing
    -Wno-unticked-promoted-constructors
    -Wpartial-fields
    -Wprepositive-qualified-module
    -Wredundant-constraints
    -Wunused-packages
  build-depends:    
    base ^>=4.16.4.0
    , aeson
    , bytestring
    , containers
    , directory
    , either
    , extra
    , filepath
    , megaparsec
    , microlens-platform
    , mtl
    , text
  hs-source-dirs:   app
  default-language: Haskell2010